--- a/style.css
+++ b/style.css
@@ -11,9 +11,17 @@ main {
 }
 
 input {
-	padding: 5px;
+	padding: 10px;
 	font-size: 20px;
-	width: 100px;
+	width: 55px;
+	border: 1px solid #dbdbdb;
+	border-radius: 5px;
+	margin: 0px;
+}
+
+input:focus {
+	outline: none;
+	border: 1px solid #854dff;
 }
 
 form {
@@ -21,16 +29,45 @@ form {
 	flex-direction: row;
 	flex-wrap: nowrap;
 	justify-content: flex-start;
-	gap: 10px;
+	gap: 5%;
+	padding: 10px;
 }
 
-.column {
+.column p {
+	font-weight: 300;
+	color: #716f6f;
+}
+
+img {
+	padding: 10px;
+	border-radius: 50%;
+	background-color: #854dff;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translateX(-50%) translateY(-50%);
+}
+
+.seperator {
+	position: relative;
+	margin-top: 40px;
+	margin-bottom: 60px;
+}
+
+.line {
+	position: absolute;
+	top: 50%;
+	left: 0;
+	width: 100%;
+	height: 1px;
+	background-color: black;
 }
 
 #results {
 	font-weight: 800;
 	font-style: italic;
-	font-size: 60px;
+	font-size: 250%;
+	padding: 10px;
 }
 
 #results p {
@@ -41,4 +78,15 @@ form {
 #monthResult,
 #yearResult {
 	color: #854dff;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+img:hover {
+	background-color: #000000;
+	cursor: pointer;
 }
