--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ main {
 	background-color: #ffffff;
 	padding: 20px;
 	border-radius: 20px 20px 150px 20px;
-	margin: 10%;
+	margin: 5%;
 }
 
 input {
@@ -43,14 +43,6 @@ img {
 	transform: translateX(-50%) translateY(-50%);
 }
 
-.inputError {
-	color: #ff5757;
-	font-size: 14px;
-	font-style: italic;
-	font-weight: 400;
-	display: none;
-}
-
 .seperator {
 	position: relative;
 	margin-top: 40px;
@@ -64,6 +56,16 @@ img {
 	width: 100%;
 	height: 1px;
 	background-color: black;
+}
+
+#inputError {
+	color: #ff5757;
+	font-size: 14px;
+	font-style: italic;
+	font-weight: 400;
+	display: none;
+	padding: 0px;
+	margin-left: 15px;
 }
 
 #label {
