--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ form {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
-	justify-content: flex-start;
+	justify-content: space-evenly;
 	gap: 5%;
 	padding: 10px;
 }
